WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258977
MediaPlayerPrivate resource owner is not always correctly set through RemoteMediaPlayerProxy
https://bugs.webkit.org/show_bug.cgi?id=258977
Summary
MediaPlayerPrivate resource owner is not always correctly set through RemoteM...
youenn fablet
Reported
2023-07-07 07:58:29 PDT
MediaPlayerPrivate resource owner is not always correctly set through RemoteMediaPlayerProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-07 07:58:46 PDT
<
rdar://problem/111908366
>
Jer Noble
Comment 2
2023-07-07 08:00:50 PDT
<
rdar://109074255
>
youenn fablet
Comment 3
2023-07-07 08:15:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15635
EWS
Comment 4
2023-07-10 05:57:05 PDT
Committed
265901@main
(9e0532d73ce4): <
https://commits.webkit.org/265901@main
> Reviewed commits have been landed. Closing PR #15635 and removing active labels.
Simon Fraser (smfr)
Comment 5
2023-08-22 11:00:31 PDT
***
Bug 256366
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug