Cherry-pick 9e0532d73ce4. rdar://problem/109074255

MediaPlayerPrivate resource owner is not always correctly set through RemoteMediaPlayerProxy
    https://bugs.webkit.org/show_bug.cgi?id=258977
    rdar://111908366

    Reviewed by Eric Carlson.

    When loading a URL, the MediaPlayerPrivate may change and we should reset the resource owner.
    Update MediaPlayer to do this handling and update RemoteMediaPlayerProxy::RemoteMediaPlayerProxy accordingly.

    * Source/WebCore/platform/graphics/MediaPlayer.cpp:
    (WebCore::MediaPlayer::loadWithNextMediaEngine):
    (WebCore::MediaPlayer::setResourceOwner):
    * Source/WebCore/platform/graphics/MediaPlayer.h:
    * Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:
    (WebKit::RemoteMediaPlayerProxy::RemoteMediaPlayerProxy):

    Canonical link: https://commits.webkit.org/265901@main

Canonical link: https://commits.webkit.org/265870.328@safari-7616-branch